--- a/source/stylus/header.styl
+++ b/source/stylus/header.styl
@@ -20,10 +20,12 @@
     margin-top: 32.5px
     transform: translateY(-50%)
     right: 105px
+    cursor: pointer
   }
 
   .email {
     font: header-font
+    cursor: pointer
   }
 
   #header-glitches {
@@ -38,6 +40,7 @@
     padding-left: 50px
     padding-bottom: 7.5px
     left: corner-glitch-side
+    cursor: pointer
   }
 
   #back-button:after {
@@ -87,7 +90,7 @@
   }
 
   .detail, #manifesto {
-    
+
     .email-link-wrapper {
       display: none
     }
