--- a/source/stylus/manifesto/hero.styl
+++ b/source/stylus/manifesto/hero.styl
@@ -45,7 +45,7 @@
     top: 55%
     transform: translateY(-50%)
     min-width: 200px
-    margin-left: 30px
+    margin-left: 0px
   }
 
   #hero-description p {
@@ -67,10 +67,10 @@
 
   #manifesto {
 
-    image-height = 80vh
+    image-height = 90vh
     maximum-image-height = 800px
-    minimum-image-height = 475px
-    minimum-height = 600px
+    minimum-image-height = 500px
+    minimum-height = 585px
 
     #hero {
       width: 100vw
@@ -88,7 +88,7 @@
       position: relative
       top: 0%
       left: 0%
-      height: 55%
+      height: 60%
       width: 100%
       transform: translateX(0%)
 
@@ -104,7 +104,7 @@
 
     #hero-description {
       width: 100%
-      padding-top: 15%
+      padding-top: 10%
       top: auto
       left: 0
       right: 0
