--- a/source/stylus/manifesto/manifesto.styl
+++ b/source/stylus/manifesto/manifesto.styl
@@ -49,6 +49,7 @@
   }
 
   .manifesto {
+    margin-bottom: auto
 
     .description {
       position: absolute
@@ -152,6 +153,7 @@
     }
 
     .manifesto {
+      margin-bottom: auto
 
       .description {
         right: 50px
@@ -199,6 +201,16 @@
       line-height: 26px
       width: auto
       margin-top: 10px
+    }
+  }
+}
+
+@media (max-height: 568px) {
+
+  #manifesto {
+
+    .manifesto {
+      margin-bottom: 75px
     }
   }
 }
